--- a/src/components/ThumbnailBar.css
+++ b/src/components/ThumbnailBar.css
@@ -12,15 +12,18 @@
   overflow-y: hidden;
   gap: 15px;
   border-radius: 10px;
+
+  -webkit-overflow-scrolling: touch;
+  padding-bottom: 20px;
 }
 
-.thumb {
+/* .thumb {
   background-color: blue;
   height: 100px;
   border-radius: 10px;
-}
+} */
 
-.title {
+/* .title {
   background-color: red;
   width: 100px;
-}
+} */
