--- a/src/components/MainDisplay.css
+++ b/src/components/MainDisplay.css
@@ -1,3 +1,12 @@
 .MainDisplay {
-  background-color: black;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: -1;
 }
