--- a/src/components/MainDisplay.css
+++ b/src/components/MainDisplay.css
@@ -4,9 +4,8 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
   z-index: -1;
 }
